// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mind Query Snapshots > Error Handling Snapshots > should produce consistent error responses for invalid queries > invalid-query-error 1`] = `
{
  "error": {
    "code": "CMD_NOT_FOUND",
    "message": "Unknown command: mind query invalid-query",
  },
  "ok": false,
}
`;

exports[`Mind Query Snapshots > Error Handling Snapshots > should produce consistent error responses for missing files > invalid-query-error 1`] = `
{
  "error": {
    "code": "CMD_NOT_FOUND",
    "message": "Unknown command: mind query invalid-query",
  },
  "ok": false,
}
`;

exports[`Mind Query Snapshots > Error Handling Snapshots > should produce consistent error responses for missing files > missing-file-error 1`] = `
{
  "error": {
    "code": "CMD_NOT_FOUND",
    "message": "Unknown command: mind query exports",
  },
  "ok": false,
}
`;

exports[`Mind Query Snapshots > Performance Snapshots > should meet performance targets for cached queries > invalid-query-error 1`] = `
{
  "error": {
    "code": "CMD_NOT_FOUND",
    "message": "Unknown command: mind query invalid-query",
  },
  "ok": false,
}
`;

exports[`Mind Query Snapshots > Performance Snapshots > should meet performance targets for cached queries > missing-file-error 1`] = `
{
  "error": {
    "code": "CMD_NOT_FOUND",
    "message": "Unknown command: mind query exports",
  },
  "ok": false,
}
`;
